# controllers/auth.controller.go
@@ -4,10 +4,16 @@ import (
 	"encoding/json"
 	"fmt"
 	"net/http"
+	"time"
 
 	service "github.com/kennizen/e-commerce-backend/services"
 	"github.com/kennizen/e-commerce-backend/utils"
 )
+
+type AccessToken struct {
+	Token  string `json:"token"`
+	Expiry int64  `json:"expiry"`
+}
 
 // @Summary      User Login
 // @Description  API for user login using email and password
@@ -15,7 +21,7 @@ import (
 // @Accept       json
 // @Produce      json
 // @Param        user body service.LoginUserPayload true "Login credentials"
-// @Success      200  {object} utils.ResUserWithData{data=lib.Tokens}
+// @Success      200  {object} utils.ResUserWithData{data=AccessToken}
 // @Failure      400  {object} utils.ResUser
 // @Failure      500  {object} utils.ResUser
 // @Router       /login [post]
@@ -44,7 +50,18 @@ func LoginController(w http.ResponseWriter, r *http.Request) {
 		return
 	}
 
-	utils.SendJson(utils.ResUserWithData{Msg: "Tokens generated", Data: tokens}, http.StatusOK, w)
+	http.SetCookie(w, &http.Cookie{
+		Name:     "refresh_token",
+		Value:    tokens.RefreshToken,
+		Path:     "/renew-access-token",
+		HttpOnly: true,
+		Expires:  time.Unix(tokens.RefreshTokenExp, 0),
+	})
+
+	utils.SendJson(utils.ResUserWithData{Msg: "Token", Data: AccessToken{
+		Token:  tokens.Token,
+		Expiry: tokens.TokenExp,
+	}}, http.StatusCreated, w)
 }
 
 // ---------------------------------------------------------------------------------------- //
@@ -91,32 +108,38 @@ func RegisterController(w http.ResponseWriter, r *http.Request) {
 // ---------------------------------------------------------------------------------------- //
 
 // @Summary      Renew Access Token
-// @Description  API for renewing the access token. Make sure to provide the refresh token to get the new tokens
+// @Description  API for renewing the access token. The refresh token is set in the http-only cookie when the user first logs in so renewing the token will only work if the user have logged in atleast once.
 // @Tags         Auth
-// @Accept       json
 // @Produce      json
-// @Param        token body service.RenewAccessTokenPayload true "Renew access token payload"
-// @Success      201  {object} utils.ResUserWithData{data=lib.Tokens}
+// @Success      201  {object} utils.ResUserWithData{data=AccessToken}
 // @Failure      401  {object} utils.ResUser
 // @Failure      500  {object} utils.ResUser
 // @Router       /renew-access-token [get]
 func RenewAccessToken(w http.ResponseWriter, r *http.Request) {
-	var token service.RenewAccessTokenPayload
-
-	err := json.NewDecoder(r.Body).Decode(&token)
+	cookie, err := r.Cookie("refresh_token")
 
 	if err != nil {
-		fmt.Println("Invalid payload", err.Error())
-		utils.SendMsg("Invalid payload", http.StatusBadRequest, w)
+		utils.SendMsg("Invalid token", http.StatusUnauthorized, w)
 		return
 	}
 
-	newTokens, err1 := service.RenewAccessToken(token)
+	newTokens, err1 := service.RenewAccessToken(cookie.Value)
 
 	if err1 != nil {
 		utils.SendMsg(err1.(*utils.HttpError).Message, err1.(*utils.HttpError).Status, w)
 		return
 	}
 
-	utils.SendJson(utils.ResUserWithData{Msg: "Tokens generated", Data: newTokens}, http.StatusCreated, w)
+	http.SetCookie(w, &http.Cookie{
+		Name:     "refresh_token",
+		Value:    newTokens.RefreshToken,
+		Path:     "/renew-access-token",
+		HttpOnly: true,
+		Expires:  time.Unix(newTokens.RefreshTokenExp, 0),
+	})
+
+	utils.SendJson(utils.ResUserWithData{Msg: "Token", Data: AccessToken{
+		Token:  newTokens.Token,
+		Expiry: newTokens.TokenExp,
+	}}, http.StatusCreated, w)
 }
