# docs/swagger.yaml
@@ -1,14 +1,10 @@
 definitions:
-  lib.Tokens:
+  controller.AccessToken:
     properties:
-      refreshToken:
-        type: string
-      refreshTokenExp:
+      expiry:
         type: integer
       token:
         type: string
-      tokenExp:
-        type: integer
     type: object
   models.Address:
     properties:
@@ -322,13 +318,6 @@ definitions:
     - firstname
     - lastname
     - password
-    type: object
-  service.RenewAccessTokenPayload:
-    properties:
-      refToken:
-        type: string
-    required:
-    - refToken
     type: object
   service.Review:
     properties:
@@ -685,7 +674,7 @@ paths:
             - $ref: '#/definitions/utils.ResUserWithData'
             - properties:
                 data:
-                  $ref: '#/definitions/lib.Tokens'
+                  $ref: '#/definitions/controller.AccessToken'
               type: object
         "400":
           description: Bad Request
@@ -911,17 +900,9 @@ paths:
       - Auth
   /renew-access-token:
     get:
-      consumes:
-      - application/json
-      description: API for renewing the access token. Make sure to provide the refresh
-        token to get the new tokens
-      parameters:
-      - description: Renew access token payload
-        in: body
-        name: token
-        required: true
-        schema:
-          $ref: '#/definitions/service.RenewAccessTokenPayload'
+      description: API for renewing the access token. The refresh token is set in
+        the http-only cookie when the user first logs in so renewing the token will
+        only work if the user have logged in atleast once.
       produces:
       - application/json
       responses:
@@ -932,7 +913,7 @@ paths:
             - $ref: '#/definitions/utils.ResUserWithData'
             - properties:
                 data:
-                  $ref: '#/definitions/lib.Tokens'
+                  $ref: '#/definitions/controller.AccessToken'
               type: object
         "401":
           description: Unauthorized
